--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password= password
 spring.h2.console.enabled= true
 spring.h2.console.path= /database
 spring.jpa.database-platform= org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
