UPDATE - Se agrego swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.h2.console.enabled= true
 spring.h2.console.path= /database
 spring.jpa.database-platform= org.hibernate.dialect.H2Dialect
 spring.sql.init.mode=always
+springdoc.swagger-ui.csrf.enabled=true
